<resources>
    <string name="app_name">PokedexMvvm</string>
    <string name="number">Numéro</string>
    <string name="type">Type</string>
    <string name="weight">Poids</string>
    <string name="search_title">Recherche</string>

    <string name="title_activity_settings">Paramètres</string>

    <!-- Drawer -->
    <string name="drawer_title">Pokedex</string>
    <string name="description_open_drawer">Open drawer</string>
    <string name="description_close_drawer">Close drawer</string>

    <!-- Preference Titles -->
    <string name="theme_header">Thème</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="switch_title">Something</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Accueil</string>
    <string name="refresh">Rafraichir</string>
    <string name="favorite">Ajouter en favoris</string>
</resources>
