<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/search_pokemon"
            android:title="@string/search_title"
            android:icon="@drawable/ic_baseline_search_24"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.widget.SearchView" />

    <item
            android:id="@+id/refresh"
            android:title="@string/refresh"
            android:icon="@drawable/ic_baseline_refresh_24"
            app:showAsAction="collapseActionView|ifRoom" />

    <item
            android:id="@+id/open_settings"
            android:title="@string/title_activity_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            app:showAsAction="collapseActionView|ifRoom" />
</menu>
