<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail.DetailActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/pokemon_detail_main_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

            <io.fonimus.pokedexmvvm.designsystem.PokemonTitleView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/first_names"
                    android:id="@+id/pokemon_detail_name"
                    android:gravity="center"
                    tools:textColor="#FFEB3B"
                    style="@style/DetailName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_image"
                    app:layout_constraintStart_toStartOf="@id/pokemon_detail_image"
                    app:layout_constraintEnd_toEndOf="@id/pokemon_detail_image"
                    app:layout_constraintBottom_toBottomOf="@id/pokemon_detail_image"
                    android:src="@drawable/circle"
                    android:layout_margin="16dp"
                    android:importantForAccessibility="no"
                    android:background="@drawable/circle" />

            <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:id="@+id/pokemon_detail_image"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:src="@tools:sample/avatars"
                    android:layout_margin="16dp"
                    android:importantForAccessibility="no" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/pokemon_detail_main_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_detail_number"
                    android:gravity="center"
                    android:text="@string/number"
                    style="@style/DetailTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_detail_type"
                    android:gravity="center"
                    android:text="@string/type"
                    style="@style/DetailTitle"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_number_content"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_detail_weight"
                    android:gravity="center"
                    android:text="@string/weight"
                    style="@style/DetailTitle"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_type_1"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/first_names"
                    android:id="@+id/pokemon_detail_number_content"
                    android:gravity="center"
                    style="@style/DetailTitle.DetailContent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_detail_type_1"
                    android:layout_marginEnd="4dp"
                    tools:chipIcon="@drawable/ic_baseline_local_fire_department_24"
                    android:textColor="@color/white"
                    tools:text="@tools:sample/first_names"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_type"
                    app:layout_constraintEnd_toStartOf="@id/pokemon_detail_type_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed" />

            <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_detail_type_2"
                    tools:chipIcon="@drawable/ic_baseline_local_fire_department_24"
                    android:textColor="@color/white"
                    tools:text="@tools:sample/first_names"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_type"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_type_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    tools:visibility="visible" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/first_names"
                    android:id="@+id/pokemon_detail_weight_content"
                    android:gravity="center"
                    style="@style/DetailTitle.DetailContent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
